PY_WEB: Flask-Celery-app - Fixed the trivial issues occured while testing & deployment.

--- a/flask-celery-app/project/client/templates/_base.html
+++ b/flask-celery-app/project/client/templates/_base.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!--styles-->
         <link rel="stylesheet" href="https://cdn.jsdeliver.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.js">
-        <link href="{{url-for('static', filename='main.css')}}" rel="stylesheet" media="screen">
+        <link href="{{url_for('static', filename='main.css')}}" rel="stylesheet" media="screen">
         {% block css %}{% endblock %}
     </head>
     <body>
